# Ecg-Arrhythmia-Edge-Transformer

./: .gitignore  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
artifacts/results/: cnn_baseline_v1_test_metrics.json  cnn_baseline_v2_normalised_test_metrics.json  cnn_baseline_v2_rr_normalised_test_metrics.json  cnn_baseline_v2_test_metrics.json
artifacts/results/deployment/: pytorch_onnx_parity_summary.json
artifacts/results/evaluation/: cnn_baseline_v1_normalised_test_metrics.json  cnn_baseline_v1_unnormalised_test_metrics.json  cnn_baseline_v2_rr_sequence_targets_test_metrics.json  cnn_baseline_v2_rr_unnormalised_test_metrics.json  cnn_baseline_v2_unnormalised_test_metrics.json  ecg_sequence_transformer_tuned_matched_test_metrics.json
data/splits/: split_summary.json
notes/: progress_log  progress_log.md
src/: beat_extraction.py  build_dataset.py  dataset_summary.py  label_mapping.py  load_record.py
src/data/: beat_extraction.py  load_record.py
src/ecg_arrhythmia/data/: build_dataset.py  build_expert_centered_dataset.py  dataset_io.py  dataset_summary.py  ecg_dataset.py  ecg_sequence_dataset.py  label_mapping.py  load_record.py  match_sequence_splits.py  plot_final_results.py  plot_transformer_hyperparameter_search.py  sequence_dataset.py  split_dataset.py  split_sequence_dataset.py
tests/: test_beat_extraction.py  test_loading_data.py
tests/integration/: test_beat_extraction_integration.py  test_build_dataset_integration.py  test_loading_data_integration.py  test_split_dataset_integration.py
tests/unit/: test_beat_extraction_unit.py  test_build_dataset_unit.py  test_cnn_beat_encoder.py  test_label_mapping_unit.py  test_loading_data_unit.py  test_r_peak_detector.py  test_rr_feature_encoder.py  test_sequence_dataset_unit.py  test_sequence_transformer.py  test_splitting_dataset_unit.py
(+23 files in other folders)
